<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:background="@drawable/part"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:text="@string/prox_calibrate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/white"
            android:textSize="22dip" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="240dip"
        android:background="@drawable/part"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_values_titles"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dip" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_x_title"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/result_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/white"
            android:textSize="22dip" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_y_title"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/result_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/white"
            android:textSize="22dip" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_offset_title"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/result_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/white"
            android:textSize="22dip" >
        </TextView>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:background="@drawable/part"
        android:gravity="center"
        android:orientation="horizontal" >

        <TableRow android:gravity="center" >

            <TextView
                android:id="@+id/result_calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@drawable/white"
                android:textSize="22dip" >
            </TextView>
        </TableRow>

        <TableRow android:gravity="center" >

            <TextView
                android:id="@+id/result_crosstalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/white"
                android:textSize="22dip" >
            </TextView>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dip"
        android:background="@drawable/part"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:text="@string/start_btn_title"
            android:textSize="27dip" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dip"
        android:background="@drawable/part"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:height="58dip"
            android:text="@string/exit_btn_title"
            android:textSize="27dip">
        </Button>
    </LinearLayout>
</LinearLayout>

